--- a/templates/config-vakio-city-air-250-500.json
+++ b/templates/config-vakio-city-air-250-500.json
@@ -1,59 +1,69 @@
 {
     "device_type": "Vakio City Air 250(500)",
-    "title": "vakio_city_air_title",
+    "title": "Vakio City Air 250/500",
     "group": "g-climate-control",
     "device": {
         "name": "Vakio City Air 250(500)",
         "id": "vakio_city_air_500",
         "groups": [
             {
-                "title": "general",
+                "title": "General",
                 "id": "general",
                 "order": 0
             },
             {
-                "title": "setpoints",
+                "title": "Setpoints",
                 "id": "setpoints",
                 "order": 1
             },
             {
-                "title": "sensors",
+                "title": "Sensors",
                 "id": "sensors",
                 "order": 2
-            },            
+            },
             {
-                "title": "alarms",
+                "title": "Alarms",
                 "id": "alarms",
                 "order": 3
             }
-        ],        
+        ],
         "channels": [
             {
-                "name": "state",
+                "id": "state",
+                "name": "State",
                 "reg_type": "coil",
                 "address": 0,
                 "type": "switch",
                 "group": "general"
             },
             {
-                "name": "mode",
+                "id": "mode",
+                "name": "Mode",
                 "reg_type": "coil",
                 "address": 1,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["inflow", "smart"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "Inflow",
+                    "Smart"
+                ],
                 "readonly": true,
                 "group": "general"
             },
             {
-                "name": "air_heater",
+                "id": "air_heater",
+                "name": "Air Heater",
                 "reg_type": "coil",
                 "address": 3,
                 "type": "switch",
                 "group": "general"
             },
             {
-                "name": "fan_speed_setpoint",
+                "id": "fan_speed_setpoint",
+                "name": "Fan Speed Setpoint",
                 "reg_type": "holding",
                 "address": 0,
                 "type": "range",
@@ -62,7 +72,8 @@
                 "group": "setpoints"
             },
             {
-                "name": "fan_speed_current",
+                "id": "fan_speed_current",
+                "name": "Current Fan Speed",
                 "reg_type": "holding",
                 "address": 3,
                 "type": "value",
@@ -70,7 +81,8 @@
                 "group": "sensors"
             },
             {
-                "name": "incoming_air_temperature",
+                "id": "incoming_air_temperature",
+                "name": "Incoming Air Temperature",
                 "reg_type": "holding",
                 "address": 4,
                 "type": "value",
@@ -78,7 +90,8 @@
                 "group": "sensors"
             },
             {
-                "name": "heating_temperature_setpoint",
+                "id": "heating_temperature_setpoint",
+                "name": "Heating Temperature Setpoint",
                 "reg_type": "holding",
                 "address": 1,
                 "type": "range",
@@ -87,91 +100,151 @@
                 "group": "setpoints"
             },
             {
-                "name": "air_damper_position",
+                "id": "air_damper_position",
+                "name": "Air Damper Position",
                 "reg_type": "holding",
                 "address": 2,
                 "type": "value",
-                "enum": [0, 1, 2, 3],
-                "enum_titles": ["closed", "open", "opening", "closing"],
+                "enum": [
+                    0,
+                    1,
+                    2,
+                    3
+                ],
+                "enum_titles": [
+                    "Closed",
+                    "Open",
+                    "Opening",
+                    "Closing"
+                ],
                 "readonly": true,
                 "group": "sensors",
                 "condition": "isDefined(air_damper_exists)&&(air_damper_exists==1)"
             },
             {
-                "name": "alarm_temperature_sensor",
+                "id": "alarm_temperature_sensor",
+                "name": "Alarm: Temperature Sensor",
                 "reg_type": "coil",
                 "address": 4,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
             },
             {
-                "name": "alarm_fan",
+                "id": "alarm_fan",
+                "name": "Alarm: Fan",
                 "reg_type": "coil",
                 "address": 5,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
             },
             {
-                "name": "alarm_underheating",
+                "id": "alarm_underheating",
+                "name": "Alarm: Underheating",
                 "reg_type": "coil",
                 "address": 6,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
             },
             {
-                "name": "alarm_overheating",
+                "id": "alarm_overheating",
+                "name": "Alarm: Overheating",
                 "reg_type": "coil",
                 "address": 7,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
             },
             {
-                "name": "alarm_low_incoming_temperature",
+                "id": "alarm_low_incoming_temperature",
+                "name": "Alarm: Low Inlet Temperature",
                 "reg_type": "coil",
                 "address": 8,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
             },
             {
-                "name": "alarm_high_outlet_temperature",
+                "id": "alarm_high_outlet_temperature",
+                "name": "Alarm: High Outlet Temperature",
                 "reg_type": "coil",
                 "address": 9,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
             },
             {
-                "name": "alarm_fire",
+                "id": "alarm_fire",
+                "name": "Alarm: Fire",
                 "reg_type": "coil",
                 "address": 10,
                 "type": "value",
-                "enum": [0, 1],
-                "enum_titles": ["no", "yes"],
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "No",
+                    "Yes"
+                ],
                 "readonly": true,
                 "group": "alarms"
-            }           
+            }
         ],
         "parameters": [
             {
                 "id": "air_damper_exists",
-                "title": "air_damper_exists",
+                "title": "Air Damper",
                 "reg_type": "coil",
                 "address": 2,
                 "format": "s8",
@@ -180,80 +253,46 @@
                     1
                 ],
                 "enum_titles": [
-                    "not_installed",
-                    "installed"
-                    
+                    "Not Installed",
+                    "Installed"
                 ],
                 "default": 0,
                 "group": "general"
             }
-        ],        
+        ],
         "translations": {
-            "en": {
-                "vakio_city_air_title":"Vakio City Air 250/500",
-                "general":"General",
-                "sensors":"Sensors",
-                "setpoints":"Setpoints",
-                "alarms":"Alarms",                
-                "state": "State",
-                "mode": "Mode",
-                "inflow": "Inflow",
-                "smart": "Smart",
-                "open": "Open",
-                "closed": "Closed",
-                "opening": "Opening",
-                "closing": "Closing",
-                "air_damper_exists": "Air Damper",
-                "not_installed": "Not Installed",
-                "installed": "Installed",
-                "air_heater": "Air Heater",
-                "fan_speed_setpoint": "Fan Speed Setpoint",
-                "heating_temperature_setpoint": "Heating Temperature Setpoint",
-                "air_damper_position": "Air Damper Position",
-                "fan_speed_current": "Current Fan Speed",
-                "incoming_air_temperature": "Incoming Air Temperature",
-                "alarm_temperature_sensor": "Alarm: Temperature Sensor",
-                "alarm_fan": "Alarm: Fan",
-                "alarm_underheating": "Alarm: Underheating",
-                "alarm_overheating": "Alarm: Overheating",
-                "alarm_low_incoming_temperature": "Alarm: Low Inlet Temperature",
-                "alarm_high_outlet_temperature": "Alarm: High Outlet Temperature",
-                "alarm_fire": "Alarm: Fire",
-                "yes": "Yes",
-                "no": "No"
-            },
             "ru": {
-                "vakio_city_air_title":"Vakio City Air 250/500",
-                "general":"Основные",
-                "sensors":"Датчики",
-                "setpoints":"Уставки",
-                "alarms":"Аварии",                
-                "state": "Состояние",
-                "mode": "Режим",
-                "inflow": "Приток",
-                "smart": "Смарт",
-                "open": "Открыто",
-                "closed": "Закрыто",
-                "opening": "Открывается",
-                "closing": "Закрывается",
-                "air_damper_exists": "Заслонка",
-                "not_installed": "Не установлена",
-                "installed": "Установлена",
-                "air_heater": "Нагреватель",
-                "fan_speed_setpoint": "Уставка скорости вентилятора",
-                "heating_temperature_setpoint": "Уставка температуры нагрева",
-                "air_damper_position": "Положение заслонки",
-                "fan_speed_current": "Скорость вентилятора текущая",
-                "incoming_air_temperature": "Температура входящего воздуха",
-                "alarm_temperature_sensor": "Авария датчика температуры",
-                "alarm_fan": "Авария вентилятора",
-                "alarm_underheating": "Авария: недогрев",
-                "alarm_overheating": "Авария: перегрев",
-                "alarm_low_incoming_temperature": "Авария: низкое значение Tвх",
-                "alarm_high_outlet_temperature": "Авария: высокое значение Твых",
-                "alarm_fire": "Авария: Пожарная сигнализация",
-                "yes": "Да",
-                "no": "Нет"
+                "Vakio City Air 250/500": "Vakio City Air 250/500",
+                "General": "Основные",
+                "Sensors": "Датчики",
+                "Setpoints": "Уставки",
+                "Alarms": "Аварии",
+                "State": "Состояние",
+                "Mode": "Режим",
+                "Inflow": "Приток",
+                "Smart": "Смарт",
+                "Open": "Открыто",
+                "Closed": "Закрыто",
+                "Opening": "Открывается",
+                "Closing": "Закрывается",
+                "Air Damper": "Заслонка",
+                "Not Installed": "Не установлена",
+                "Installed": "Установлена",
+                "Air Heater": "Нагреватель",
+                "Fan Speed Setpoint": "Уставка скорости вентилятора",
+                "Heating Temperature Setpoint": "Уставка температуры нагрева",
+                "Air Damper Position": "Положение заслонки",
+                "Current Fan Speed": "Скорость вентилятора текущая",
+                "Incoming Air Temperature": "Температура входящего воздуха",
+                "Alarm: Temperature Sensor": "Авария датчика температуры",
+                "Alarm: Fan": "Авария вентилятора",
+                "Alarm: Underheating": "Авария: недогрев",
+                "Alarm: Overheating": "Авария: перегрев",
+                "Alarm: Low Inlet Temperature": "Авария: низкое значение Tвх",
+                "Alarm: High Outlet Temperature": "Авария: высокое значение Твых",
+                "Alarm: Fire": "Авария: Пожарная сигнализация",
+                "Yes": "Да",
+                "No": "Нет"
             }
         }
     }
